--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <form action="">
        <p> <input type="text" class="text-line" value="First name" />
         <input type="text" class="text-line" value="Second name" /></p>
-        
+        <p>Briefly tell us your project and your current goal. <br>How can we help you?</p>
+        <p><input type="text" class="text-line" value="Email" /></p>
+        <p><textarea name="" id="" cols="30" rows="10" class="text-line"></textarea></p>
     </form>
     
 </body>
